@@ -1339,7 +1339,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '153';
+$wgStyleVersion = '154';
 
 
 # Server-side caching:
